--- a/views/write.ejs
+++ b/views/write.ejs
@@ -32,19 +32,32 @@
         <div class="add_con">
           <div class="add_detail">
             <label class="menu_add"
-              ><span>메뉴명</span><span>:</span> <input type="text" name="menu"
+              ><span>메뉴명</span><span>:</span>
+              <input
+                type="text"
+                name="menu"
+                placeholder="메뉴명을 입력해주세요"
             /></label>
             <label class="category_add"
               ><span>카테고리</span><span>:</span>
-              <input type="text" name="category"
+              <input
+                type="text"
+                name="category"
+                placeholder="한식, 양식, 일식, 중식, 기타"
             /></label>
             <label class="photo_add"
               ><span>사진 URL</span><span>:</span>
-              <input type="text" name="photoUrl"
+              <input
+                type="text"
+                name="photoUrl"
+                placeholder="이미지가 없다면 빈칸으로 작성해주세요."
             /></label>
             <label class="coment_add"
               ><span>코멘트</span><span>:</span>
-              <input type="text" name="comment"
+              <input
+                type="text"
+                name="comment"
+                placeholder="음식에 대한 간단한 코멘트를 작성해주세요."
             /></label>
             <label class="recipe_add"
               ><span>레시피</span><span>:</span>
@@ -63,7 +76,7 @@
 
     <script>
       let photoUrl = document.querySelector(".photo_add input");
-      console.log(photoUrl);
+      // console.log(photoUrl);
     </script>
   </body>
 </html>
