--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>수정하기</title>
+    <link rel="icon" href="/public/img/logo.png" />
     <link rel="stylesheet" href="/public/css/eidt.css" />
   </head>
   <body>
@@ -31,7 +32,6 @@
         </div>
 
         <div class="add_con">
-          <div><%= post._id %></div>
           <div class="add_detail">
             <label class="menu_add"
               ><span>메뉴명</span><span>:</span>
