--- a/views/write.ejs
+++ b/views/write.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>추가하기</title>
+    <link rel="icon" href="/public/img/logo.png" />
     <link rel="stylesheet" href="/public/css/write.css" />
   </head>
   <body>
