--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -24,7 +24,7 @@
         </div>
       </div>
     </header>
-
+    <!-- <form action="/edit/<%= post._id %>" method="post"> -->
     <form action="/edit?_method=PUT" method="post">
       <section class="add_con_bg mw1">
         <div class="clip2_img">
@@ -33,29 +33,44 @@
 
         <div class="add_con">
           <div class="add_detail">
+            <input type="text" name="id" value="<%= post._id %>" hidden />
             <label class="menu_add"
               ><span>메뉴명</span><span>:</span>
               <input
                 type="text"
                 name="menu"
                 placeholder="메뉴명을 입력해주세요"
-                value="<%= post.메뉴명 %>"
+                value="<%= post.postMenu %>"
             /></label>
             <label class="category_add"
               ><span>카테고리</span><span>:</span>
-              <input
-                type="text"
-                name="category"
-                placeholder="한식, 양식, 일식, 중식, 기타"
-                value="<%= post.카테고리 %>"
-            /></label>
+              <!-- <select name="category" class="cate_select">
+                <option value="none">=선택=</option>
+                <option value="한식" <%= post.postCategory === '한식' ? 'selected' : '' %>>한식</option>
+                <option value="양식" <%= post.postCategory === '양식' ? 'selected' : '' %>>양식</option>
+                <option value="일식" <%= post.postCategory === '일식' ? 'selected' : '' %>>일식</option>
+                <option value="중식" <%= post.postCategory === '중식' ? 'selected' : '' %>>중식</option>
+                <option value="기타" <%= post.postCategory === '기타' ? 'selected' : '' %>>기타</option>
+              </select> -->
+              <select name="category" class="cate_select">
+                <option value="<%= post.postCategory %>">
+                  <%= post.postCategory %> (기존선택)
+                </option>
+                <option value="한식">한식</option>
+                <option value="양식">양식</option>
+                <option value="일식">일식</option>
+                <option value="중식">중식</option>
+                <option value="기타">기타</option>
+              </select>
+              <span class="select_error">카테고리를 선택해주세요.</span>
+            </label>
             <label class="photo_add"
               ><span>사진 URL</span><span>:</span>
               <input
                 type="text"
                 name="photoUrl"
                 placeholder="이미지가 없다면 빈칸으로 작성해주세요."
-                value="<%= post.사진URL %>"
+                value="<%= post.postPhotoUrl %>"
             /></label>
             <label class="coment_add"
               ><span>코멘트</span><span>:</span>
@@ -63,12 +78,12 @@
                 type="text"
                 name="comment"
                 placeholder="음식에 대한 간단한 코멘트를 작성해주세요."
-                value="<%= post.코멘트 %>"
+                value="<%= post.PostComent %>"
             /></label>
             <label class="recipe_add"
               ><span>레시피</span><span>:</span>
               <textarea name="recipe" cols="75" rows="5">
-                  <%= post.레시피 %></textarea
+                  <%= post.PostRecipe %></textarea
               >
             </label>
           </div>
@@ -84,8 +99,17 @@
     </div>
 
     <script>
-      let photoUrl = document.querySelector(".photo_add input");
-      // console.log(photoUrl);
+      // const $select = document.querySelector(".cate_select");
+      // const $selectError = document.querySelector(".select_error");
+      // const $editButton = document.querySelector(".edit_button");
+
+      // $editButton.addEventListener("click", (e) => {
+      //   if ($select.value === "none") {
+      //     e.preventDefault(); // submit 막기
+      //     alert("카테고리를 선택해주세요."); // 경고창 띄우기
+      //     $selectError.classList.add("on");
+      //   }
+      // });
     </script>
   </body>
 </html>
